Starting carousel development; fixed an overflow bug

--- a/src/css/_project-modal.scss
+++ b/src/css/_project-modal.scss
@@ -12,6 +12,7 @@
 
         &__backdrop {
             position: absolute;
+            pointer-events: none;
             overflow: hidden;
             opacity: 0;
             transition: all 250ms ease, opacity 100ms ease;
