--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -2,6 +2,7 @@
 @import 'variables';
 @import 'checkbox';
 @import 'project-modal';
+@import 'carousel';
 @import 'utility';
 @import 'https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital@0;1&display=swap';
 @import 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css';
@@ -263,5 +264,6 @@ a {
 
     @include checkbox;
     @include project-modal;
+    @include carousel;
     @include utility;
 }
